--- a/src/forms/PasswordDlg.ui
+++ b/src/forms/PasswordDlg.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>578</width>
-    <height>255</height>
+    <height>273</height>
    </rect>
   </property>
   <property name="sizePolicy" >
@@ -44,7 +44,7 @@
        <property name="sizeType" >
         <enum>QSizePolicy::Fixed</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>20</width>
          <height>50</height>
@@ -57,7 +57,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -113,16 +113,7 @@
       <string>Key</string>
      </property>
      <layout class="QVBoxLayout" >
-      <property name="leftMargin" >
-       <number>0</number>
-      </property>
-      <property name="topMargin" >
-       <number>0</number>
-      </property>
-      <property name="rightMargin" >
-       <number>0</number>
-      </property>
-      <property name="bottomMargin" >
+      <property name="margin" >
        <number>0</number>
       </property>
       <item>
@@ -131,6 +122,14 @@
          <number>0</number>
         </property>
         <widget class="QWidget" name="pw_entry" >
+         <property name="geometry" >
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>556</width>
+           <height>116</height>
+          </rect>
+         </property>
          <layout class="QGridLayout" >
           <item row="0" column="0" >
            <widget class="QCheckBox" name="Check_Password" >
@@ -204,7 +203,7 @@
             <property name="orientation" >
              <enum>Qt::Horizontal</enum>
             </property>
-            <property name="sizeHint" >
+            <property name="sizeHint" stdset="0" >
              <size>
               <width>40</width>
               <height>20</height>
@@ -215,6 +214,14 @@
          </layout>
         </widget>
         <widget class="QWidget" name="pw_repeat" >
+         <property name="geometry" >
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>556</width>
+           <height>116</height>
+          </rect>
+         </property>
          <layout class="QVBoxLayout" >
           <item>
            <widget class="QLabel" name="label" >
@@ -240,7 +247,7 @@
               <property name="orientation" >
                <enum>Qt::Horizontal</enum>
               </property>
-              <property name="sizeHint" >
+              <property name="sizeHint" stdset="0" >
                <size>
                 <width>40</width>
                 <height>20</height>
@@ -272,7 +279,7 @@
             <property name="orientation" >
              <enum>Qt::Vertical</enum>
             </property>
-            <property name="sizeHint" >
+            <property name="sizeHint" stdset="0" >
              <size>
               <width>20</width>
               <height>40</height>
@@ -290,7 +297,7 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="standardButtons" >
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -298,17 +305,17 @@
  </widget>
  <layoutdefault spacing="6" margin="11" />
  <tabstops>
-  <tabstop>Edit_Password</tabstop>
-  <tabstop>Combo_KeyFile</tabstop>
-  <tabstop>Check_Password</tabstop>
-  <tabstop>Check_KeyFile</tabstop>
-  <tabstop>ButtonChangeEchoMode</tabstop>
-  <tabstop>Button_Browse</tabstop>
   <tabstop>Button_Bookmarks</tabstop>
-  <tabstop>buttonBox</tabstop>
+  <tabstop>Check_Password</tabstop>
+  <tabstop>Edit_Password</tabstop>
+  <tabstop>ButtonChangeEchoMode</tabstop>
+  <tabstop>Check_KeyFile</tabstop>
+  <tabstop>Combo_KeyFile</tabstop>
+  <tabstop>Button_Browse</tabstop>
   <tabstop>Button_GenKeyFile</tabstop>
-  <tabstop>Button_Back</tabstop>
   <tabstop>Edit_PwRepeat</tabstop>
+  <tabstop>Button_Back</tabstop>
+  <tabstop>buttonBox</tabstop>
  </tabstops>
  <resources/>
  <connections/>
