--- a/src/forms/AddBookmarkDlg.ui
+++ b/src/forms/AddBookmarkDlg.ui
@@ -40,7 +40,7 @@
      <property name="sizeType" >
       <enum>QSizePolicy::Fixed</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>50</height>
@@ -89,13 +89,18 @@
    <item>
     <widget class="QDialogButtonBox" name="buttonBox" >
      <property name="standardButtons" >
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
- <includes/>
+ <tabstops>
+  <tabstop>Edit_Title</tabstop>
+  <tabstop>Edit_Filename</tabstop>
+  <tabstop>Button_Browse</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
