--- a/src/forms/DatabaseSettingsDlg.ui
+++ b/src/forms/DatabaseSettingsDlg.ui
@@ -33,7 +33,7 @@
      <property name="sizeType" >
       <enum>QSizePolicy::Fixed</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>50</height>
@@ -96,13 +96,19 @@
    <item>
     <widget class="QDialogButtonBox" name="ButtonBox" >
      <property name="standardButtons" >
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11" />
+ <tabstops>
+  <tabstop>ComboAlgo</tabstop>
+  <tabstop>EditRounds</tabstop>
+  <tabstop>ButtonBench</tabstop>
+  <tabstop>ButtonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
