--- a/src/forms/EditGroupDlg.ui
+++ b/src/forms/EditGroupDlg.ui
@@ -25,10 +25,7 @@
    </property>
    <item>
     <layout class="QGridLayout" >
-     <property name="horizontalSpacing" >
-      <number>6</number>
-     </property>
-     <property name="verticalSpacing" >
+     <property name="spacing" >
       <number>6</number>
      </property>
      <item row="1" column="0" >
@@ -53,7 +50,7 @@
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" >
+       <property name="sizeHint" stdset="0" >
         <size>
          <width>172</width>
          <height>20</height>
@@ -89,7 +86,7 @@
    <item>
     <widget class="QDialogButtonBox" name="ButtonBox" >
      <property name="standardButtons" >
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::NoButton|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
      </property>
     </widget>
    </item>
@@ -99,6 +96,8 @@
  <tabstops>
   <tabstop>EditTitle</tabstop>
   <tabstop>ComboIconPicker</tabstop>
+  <tabstop>Button_Icon</tabstop>
+  <tabstop>ButtonBox</tabstop>
  </tabstops>
  <resources/>
  <connections/>
