--- a/src/forms/ManageBookmarksDlg.ui
+++ b/src/forms/ManageBookmarksDlg.ui
@@ -27,7 +27,7 @@
      <property name="sizeType" >
       <enum>QSizePolicy::Fixed</enum>
      </property>
-     <property name="sizeHint" >
+     <property name="sizeHint" stdset="0" >
       <size>
        <width>20</width>
        <height>50</height>
@@ -80,7 +80,7 @@
          <property name="sizeType" >
           <enum>QSizePolicy::Fixed</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0" >
           <size>
            <width>20</width>
            <height>10</height>
@@ -113,7 +113,7 @@
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" >
+         <property name="sizeHint" stdset="0" >
           <size>
            <width>20</width>
            <height>161</height>
@@ -137,6 +137,15 @@
    </item>
   </layout>
  </widget>
+ <tabstops>
+  <tabstop>ListWidget</tabstop>
+  <tabstop>Button_Add</tabstop>
+  <tabstop>Button_Edit</tabstop>
+  <tabstop>Button_Delete</tabstop>
+  <tabstop>Button_Up</tabstop>
+  <tabstop>Button_Down</tabstop>
+  <tabstop>buttonBox</tabstop>
+ </tabstops>
  <resources/>
  <connections/>
 </ui>
