Added 2 new password generator options
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@227 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/forms/PasswordGenDlg.ui
+++ b/src/forms/PasswordGenDlg.ui
@@ -6,7 +6,7 @@
     <x>0</x>
     <y>0</y>
     <width>462</width>
-    <height>491</height>
+    <height>543</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -43,7 +43,7 @@
         <x>0</x>
         <y>0</y>
         <width>440</width>
-        <height>219</height>
+        <height>271</height>
        </rect>
       </property>
       <attribute name="title" >
@@ -102,7 +102,7 @@
            <item row="2" column="1" >
             <widget class="QCheckBox" name="checkBox7" >
              <property name="text" >
-              <string>U&amp;nderline</string>
+              <string>&amp;Underline</string>
              </property>
              <property name="shortcut" >
               <string>Alt+N</string>
@@ -125,7 +125,7 @@
            <item row="0" column="1" >
             <widget class="QCheckBox" name="checkBox5" >
              <property name="text" >
-              <string>White &amp;Spaces</string>
+              <string>&amp;White Spaces</string>
              </property>
              <property name="shortcut" >
               <string>Alt+S</string>
@@ -148,7 +148,7 @@
            <item row="1" column="1" >
             <widget class="QCheckBox" name="checkBox6" >
              <property name="text" >
-              <string>Minus</string>
+              <string>&amp;Minus</string>
              </property>
             </widget>
            </item>
@@ -219,6 +219,20 @@
          </item>
         </layout>
        </item>
+       <item>
+        <widget class="QCheckBox" name="Check_ExcludeLookAlike" >
+         <property name="text" >
+          <string>Exclude look-alike characters</string>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QCheckBox" name="Check_EveryGroup" >
+         <property name="text" >
+          <string>Ensure that password contains characters from every group</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="tabPronounceable" >
@@ -227,7 +241,7 @@
         <x>0</x>
         <y>0</y>
         <width>440</width>
-        <height>219</height>
+        <height>271</height>
        </rect>
       </property>
       <attribute name="title" >
@@ -250,7 +264,7 @@
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout" >
          <item>
-          <layout class="QGridLayout" name="gridLayout" >
+          <layout class="QGridLayout" name="gridLayout_2" >
            <property name="spacing" >
             <number>15</number>
            </property>
